# SPSAManyWells

./: pyproject.toml
data/stresstest/: optimized_wells_config.csv
scripts/data_generation/: file_utils.py  init_utils.py  read_dump.py  read_dump_nonstationary.py  stresstest_wells.py  well.py
scripts/data_generation/open_loop_nonstationary/: generate_open_loop_nonstationary_well_data.py
scripts/ml_examples/: noise.py
spsa/: constraints.py  examine_function_landscape.py  find_init_positions.py  gradient.py  optimizer.py  spsa.py  utils.py  visualize.py
spsa/old_experiments/: augmented_lagrangian.txt  max_wells.txt  optchoke.txt  rho.txt  variance1.txt  vector_scaling.txt
